Implementaion of Filters

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -584,3 +584,33 @@ header {
 .search-btn:hover {
   background-color: #ff3040;
 }
+
+
+
+
+/* social links */
+
+.social-links {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background-color: #333;
+  color: #fff;
+  transition: all 0.3s ease;
+  text-decoration: none;
+}
+
+.social-link:hover {
+  /* background-color: var(--primary-color); */
+  background-color: #ff3040;
+  transform: translateY(-3px);
+}
