--- a/views/listings/learn.ejs
+++ b/views/listings/learn.ejs
@@ -509,6 +509,7 @@
         background-color: #333;
         color: #fff;
         transition: all 0.3s ease;
+        text-decoration: none;
     }
 
     .social-link:hover {
@@ -688,6 +689,7 @@
         color: black;
         font-weight: 500;
         transition: color 0.3s;
+        text-decoration: none;
     }
 
     .nav-item:hover {
@@ -737,6 +739,7 @@
         color: black;
         font-weight: 500;
         transition: color 0.3s;
+        text-decoration: none;
     }
 
     .signup-link:hover,
@@ -746,11 +749,11 @@
 
 
     .navbar-brand {
-        display: flex;
+        /* display: flex;
         align-items: center;
         justify-content: center;
         width: 40px;
-        height: 40px;
+        height: 40px; */
         border-radius: 50%;
         /* background-color: #ff385c; */
         color: #ff385c;
@@ -994,7 +997,8 @@
                     <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-pinterest"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <!-- <a href="#" class="social-link"><i class="fab fa-pinterest"></i></a> -->
                 </div>
                 <div class="newsletter">
                     <p>Subscribe to our newsletter</p>
