--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,11 +1,16 @@
 <footer>
     <div class="f-info">
-        <div class="f-info-socials">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
 
+        <div class="social-links mt-3">
+            <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+
+            <!-- <a href="#" class="social-link"><i class="fab fa-pinterest"></i></a> -->
         </div>
+
+
         <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
